# klegally

./: docker-compose.yml
api/: main.py  pyproject.toml  test_fastapi_login.py  test_ingestion.py  test_integration.py
api/api/: __init__.py  app.py  config.py
api/api/infrastructure/: __init__.py  storage.py
api/api/infrastructure/email/: __init__.py
api/api/infrastructure/queue/: __init__.py  client.py
api/api/routers/: __init__.py  auth.py  documents.py  users.py
api/api/schemas/: __init__.py  auth.py  users.py
api/api/services/: __init__.py  auth.py  db.py
infra/: Dockerfile.api  Dockerfile.worker
shared/auth/: README.md  pyproject.toml
shared/auth/auth/: __init__.py  config.py
shared/auth/auth/dependencies/: __init__.py  current_user.py
shared/auth/auth/exceptions/: __init__.py  auth.py
shared/auth/auth/jwt/: __init__.py  access.py  schemas.py  verification.py
shared/auth/auth/middleware/: __init__.py  auth_context.py
shared/auth/auth/security/: __init__.py  hashing.py
shared/queue/: README.md  pyproject.toml
shared/queue/shared_queue/: __init__.py  chunk.py  embed.py  enums.py  events.py  interface.py  llm.py  parse.py  redis.py  storage.py  vector.py
storage/workspaces/workspace_test_01/docs/: 78d5696e-59f9-4031-9e17-c89e09584bc6_report.txt
worker/: README.md  main.py  main_ingestion.py  pyproject.toml  test_ingestion_worker.py  test_premature_extraction.py  test_worker.py
worker/worker/: __init__.py  handlers.py  ingestion.py
worker/worker/infrastructure/email/: interface.py  mailjet.py
worker/worker/infrastructure/queue/: __init__.py  poller.py
