[project]
name = "worker"
version = "0.1.0"
description = "KLegally Async Worker Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "shared-queue",
    "mailjet-rest>=1.3.4",
]

[tool.uv.sources]
shared-queue = { path = "../shared/queue", editable = true }
