[project]
name = "worker"
version = "0.1.0"
description = "KLegally Async Worker Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "shared-queue",
    "mailjet-rest>=1.3.4",
    "motor>=3.7.1",
    "boto3>=1.43.17",
    "httpx>=0.28.1",
]

[tool.uv.sources]
shared-queue = { path = "../shared/queue", editable = true }
