[project]
name = "shared-auth"
version = "0.1.0"
description = "Shared authentication utilities"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "PyJWT",
    "pydantic",
    "pydantic-settings",
    "argon2-cffi",
    "cryptography",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth"]
